Update with link

--- a/files/css/index.css
+++ b/files/css/index.css
@@ -3,7 +3,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* font Area finished font-family: 'Oswald', sans-serif; font-family: 'Poppins', sans-serif; */
+
+/* html area */
+html {
+  scroll-behavior: smooth;
+}
+
 /* header area */
+
+
 .header_area {
   background: #0A1B2A;
   width: 100%;
@@ -286,6 +294,10 @@
   border-radius: 5px;
 }
 
+.contact-me-title h3 {
+  text-align: center;
+}
+
 .contact-title {
   margin-left: 25%;
 }
@@ -348,6 +360,18 @@
   color: ;
 }
 
+/* footer area  */
+
 .footer-area {
   background: rgba(0, 0, 0, 0.774);
+}
+
+.footer-details h1 {
+  font-size: 37px;
+  font-weight: 300;
+}
+
+.footer-facebook iframe {
+  margin-left: 12%;
+
 }
